--- a/components/package.json
+++ b/components/package.json
@@ -57,7 +57,7 @@
   }
   ,
   "lint-staged": {
-    "src/**/*.{js,ts,tsx}": "eslint --cache --fix",
-    "src/**/*.{js,ts,tsx,css}": "prettier --write"
+    "src/**/*.{ts,tsx}": "eslint --cache --fix",
+    "src/**/*.{ts,tsx,css}": "prettier --write"
   }
 }
