--- a/components/package.json
+++ b/components/package.json
@@ -9,6 +9,7 @@
     "@types/node": "16.11.26",
     "@types/react": "17.0.41",
     "@types/react-dom": "17.0.14",
+    "node-sass": "^4.14.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "6.2.2",
@@ -22,7 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install",
-    "eslint": "eslint src --ext .js,.jsx,.ts,.tsx"
+    "eslint": "eslint src --ext .jsx,.ts,.tsx"
   },
   "eslintConfig": {
     "extends": [
@@ -54,10 +55,9 @@
     "husky": "7.0.4",
     "lint-staged": "12.3.7",
     "prettier": "2.6.0"
-  }
-  ,
+  },
   "lint-staged": {
     "src/**/*.{ts,tsx}": "eslint --cache --fix",
-    "src/**/*.{ts,tsx,css}": "prettier --write"
+    "src/**/*.{ts,tsx,scss}": "prettier --write"
   }
 }
