--- a/components/package.json
+++ b/components/package.json
@@ -9,7 +9,6 @@
     "@types/node": "16.11.26",
     "@types/react": "17.0.41",
     "@types/react-dom": "17.0.14",
-    "node-sass": "^4.14.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "6.2.2",
@@ -54,7 +53,8 @@
     "eslint-plugin-react": "7.29.4",
     "husky": "7.0.4",
     "lint-staged": "12.3.7",
-    "prettier": "2.6.0"
+    "prettier": "2.6.0",
+    "sass": "1.49.9"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": "eslint --cache --fix",
