--- a/components/package.json
+++ b/components/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.29.4",
     "husky": "7.0.4",
+    "jest-watch-typeahead": "0.6.5",
     "lint-staged": "12.3.7",
     "prettier": "2.6.0",
     "sass": "1.49.9"
